# fpr_executor

./: .gitignore  Cargo.toml  README.md  executor-back.Dockerfile  executor-base.Dockerfile  executor-node.Dockerfile  executor-python.Dockerfile  executor-sample.Dockerfile
.github/workflows/: pipeline.yml
src/: main.rs
src/core/: args.rs  logs.rs  mod.rs  start.rs
src/executors/: executor.rs  mod.rs  python_executor.rs  python_node.rs  types.rs
src/network/: client_handler.rs  message_extractor.rs  message_injector.rs  mod.rs  tcp_listener.rs
src/utils/: json_validator.rs  mod.rs  path_checker.rs
