[package]
name = "fpr-executor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
simplelog = { version = "0.12.0", features = ["paris"] }
env_logger = "0.10.0"
clap = { version = "4.3.0", features = ["derive"] }
